@@ -2,7 +2,6 @@ package com.example.Backend.service.Impl;
 
 import com.example.Backend.dto.Response.FriendListResponse;
 import com.example.Backend.dto.Response.FriendResponse;
-import com.example.Backend.dto.Response.SearchUserResponse;
 import com.example.Backend.dto.Response.UserResponse;
 import com.example.Backend.entity.Enum.FriendStatus;
 import com.example.Backend.entity.Friend;
@@ -12,7 +11,6 @@ import com.example.Backend.entity.User;
 import com.example.Backend.exception.CustomException.NotFoundException;
 import com.example.Backend.mapper.BlogMapper;
 import com.example.Backend.mapper.FriendMapper;
-import com.example.Backend.mapper.UserMapper;
 import com.example.Backend.repository.FriendRepository;
 import com.example.Backend.repository.UserRepository;
 import com.example.Backend.service.UserService;
@@ -29,20 +27,20 @@ public class UserServiceImpl implements UserService {
     private final BlogMapper blogMapper;
     private final FriendRepository friendRepository;
     private final FriendMapper friendMapper;
-    private final UserMapper userMapper;
 
     @Override
     public UserResponse profile(String name) {
         User user = userRepository.findByEmail(name).orElseThrow(()->new NotFoundException("User not found"));
         return UserResponse.builder()
+                .id(user.getId())
                 .fullName(user.getFullName())
                 .myBlog(user.getBlogs().stream().map(blogMapper::toBlogResponseDto).collect(Collectors.toList()))
                 .build();
     }
 
     @Override
-    public UserResponse profileShare(String name) {
-        User user = userRepository.findByEmail(name).orElseThrow(()->new NotFoundException("User not found"));
+    public UserResponse profileShare(Long id) {
+        User user = userRepository.findById(id).orElseThrow(()->new NotFoundException("User not found"));
         List<Share> shares = user.getShares();
         return UserResponse.builder()
                 .fullName(user.getFullName())
@@ -51,8 +49,8 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public UserResponse profileLike(String name) {
-        User user = userRepository.findByEmail(name).orElseThrow(()->new NotFoundException("User not found"));
+    public UserResponse profileLike(Long id) {
+        User user = userRepository.findById(id).orElseThrow(()->new NotFoundException("User not found"));
         List<Like> likes = user.getLikes().stream()
                 .filter(Like::isLiked)
                 .toList();
@@ -70,18 +68,23 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<FriendListResponse> getAllFriend(String name) {
-        User user = userRepository.findByEmail(name).orElseThrow(()->new NotFoundException("User not found"));
+    public List<FriendListResponse> getAllFriend(Long id) {
+        User user = userRepository.findById(id).orElseThrow(()->new NotFoundException("User not found"));
         List<Friend> friends = friendRepository.findByUserAndStatus(user, FriendStatus.valueOf("ACCEPTED"));
         List<Friend> friends1 = friendRepository.findByFriendAndStatus(user, FriendStatus.valueOf("ACCEPTED"));
-        friends.addAll(friends1);
-        return friends.stream().map(friendMapper::toFriendListResponse).collect(Collectors.toList());
+        List<FriendListResponse> friendListResponses1 = new java.util.ArrayList<>(friends.stream().map(friendMapper::toFriendListResponse).toList());
+        List<FriendListResponse> friendListResponses2 = friends1.stream().map(friendMapper::toUserListResponse).toList();
+        friendListResponses1.addAll(friendListResponses2);
+        return friendListResponses1;
     }
 
     @Override
-    public List<SearchUserResponse> searchUser(String name, String email) {
-        User user = userRepository.findByEmail(email).orElseThrow(()->new NotFoundException("User not found"));
-        List<User> users = userRepository.findByFullNameContainingIgnoreCase(name);
-        return users.stream().map(userMapper::toSearchUserResponse).collect(Collectors.toList());
+    public UserResponse getProfile(Long userId) {
+        User user = userRepository.findById(userId).orElseThrow(()->new NotFoundException("User not found"));
+        return UserResponse.builder()
+                .id(user.getId())
+                .fullName(user.getFullName())
+                .myBlog(user.getBlogs().stream().map(blogMapper::toBlogResponseDto).collect(Collectors.toList()))
+                .build();
     }
 }
